# pylogger

./: .coveragerc  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report---.md  request---.md
.github/workflows/: pr_to_release.yml  push_to_release.yml  pytest.yml
pylogger/: pylogger.py
samples/pylogger/: pylogger_sample.py
tests/: test_pylogger.py
