[tool.poetry]
name = "python-repository-template"
version = "0.0.1"
description = "A repository to be used for any Python project"
authors = ["Novus, Inc."]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.2"
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.790"
isort = "^5.6.4"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
