[metadata]
name = python-repository-template
url = https://github.com/novus-inc/python-repository-template
author = Novus, Inc.
classifiers =
    Programming Language :: Python :: 3.7
project_urls =
    Source = https://github.com/novus-inc/python-repository-template

[options]
python_requires = ==3.7
zip_safe = false

[flake8]
ignore =
    E226, # Missing whitespace around arithmetic operator
    E262, # Inline comment should start with '# '
    E266, # Too many leading '#' for block comment
    E402, # Module level import not at top of file
    E501, # Line too long (82 &gt; 79 characters)
    W503, # Line break before binary operator
    E712, # Comparison to true should be 'if cond is true:' or 'if cond:'
max-line-length = 119
count = False
statistics = True

[tool:pytest]
addopts = -p no:warnings --cov pylogger --cov-report xml --cov-config .coveragerc --durations=10

log_cli = 1
log_cli_level = DEBUG
log_cli_date_format = %%Y-%%m-%%d %%H:%%M:%%S
log_cli_format = %%(asctime)s %%(levelname)s %%(message)s

log_file = pytest.log
log_file_level = DEBUG
log_file_date_format = %%Y-%%m-%%d %%H:%%M:%%S
log_file_format = %%(asctime)s %%(levelname)s %%(message)s

[mypy]
# https://mypy.readthedocs.io/en/stable/command_line.html
# Import discovery
ignore_missing_imports = True

# Platform configuration
python_version = 3.7

# Disallow dynamic typing

# Untyped definitions and calls
disallow_untyped_calls = False
disallow_untyped_defs = False
disallow_incomplete_defs = False

# None and Optional handling
no_strict_optional = True

# Configuring warnings
warn_redundant_casts = True
warn_unused_ignores = True

# Miscellaneous strictness flags
allow_redefinition = True

# Configuring error messages
show_error_context = True
show_column_numbers = True
show_error_codes = True
pretty = True
show_absolute_path = True

# Incremental mode

# Advanced options
warn_incomplete_stub = True

# Report generation

# Miscellaneous
scripts_are_modules = True
